# DSAnalyzer

./: README.md
Base project/docs/: Notes.txt  README.md  Zápočtový program - zadání.docx
Base project/src/: EmptyStoredProcedures.cpp  EmptyStoredProcedures.h  Logger.cpp  Logger.h  README.md  notes.txt
Base project/src/DSAnalyzer/: CMakeLists.txt  DSAnalyzer.cpp  README.md  vcpkg.json
Base project/src/DSAnalyzer/Procedures/: GetAllClubsByOneJudgeResultsBetweenDates.sqltemplate  GetAllClubsInfoByOneJudgeBetweenDates.sqltemplate  GetAllJudgesBetweenDates.sqltemplate  GetAllJudgesOfClubBetweenDates.sqltemplate  GetAllJudgesOfPairBetweenDates.sqltemplate  GetAllJudgesPersonInfoBetweenDates.sqltemplate  GetAllJudgesToClubPersonInfoBetweenDates.sqltemplate  GetAllJudgesToPairPersonInfoBetweenDates.sqltemplate  GetAllPairsByOneJudgeResultsBetweenDates.sqltemplate  GetAllPairsPersonInfoByOneJudgeBetweenDates.sqltemplate  GetAllResultsBetweenDates.sqltemplate  GetAllResultsOfClubBetweenDates.sqltemplate  GetAllResultsOfPairBetweenDates.sqltemplate  GetNameById.sqltemplate  GetOneJudgeResultsBetweenDatesById.sqltemplate  GetOneJudgeResultsBetweenDatesByName.sqltemplate
Base project/src/DSAnalyzer/Source Files/: DSAnalyzerCore.cpp  DSConsoleUI.cpp  DataEvaluator.cpp  FinalEvaluatorSquaredRatiod.cpp  RoundEvaluatorOnlyIfRatio.cpp  StoredProcedures.cpp
Base project/src/DSAnalyzer/headers/: AbstractInstanceFinalEvaluator.h  AbstractInstanceRoundEvaluator.h  CzechPrintingHelper.h  DSAnalyzerCore.h  DSConsoleUI.h  DataEvaluator.h  FinalEvaluatorSquaredRatiod.h  RateDataStructures.h  RoundEvaluatorOnlyIfRatio.h  StoredProcedures.h
Base project/src/DSDatabase/: DatabaseCommunicator.cpp  DatabaseCommunicator.h
Base project/src/DSResultsScraper/: CMakeLists.txt  CMakePresets.json  DSResultsScraper.cpp  README.md  vcpkg.json
Base project/src/DSResultsScraper/Procedures/: InsertComp.sqltemplate  InsertEvent.sqltemplate  InsertIsJudging.sqltemplate  InsertResult.sqltemplate
Base project/src/DSResultsScraper/Source Files/: JsonResultsParser.cpp  JsonRetriever.cpp  ResultsScraper.cpp  StoredProcedures.cpp
Base project/src/DSResultsScraper/headers/: DSResultsScraper.h  DateHandler.h  JsonResultsParser.h  JsonRetriever.h  ResultsScraper.h  StoredProcedures.h
Zadání/: Thumbs.db
Zadání/Drawio diagrams/: .$Database layers.drawio.bkp  Architecture Diagram Layers.drawio
(+20 files in other folders)
